// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic fragment 1`] = `
"#if canImport(RelaySwiftUI)
import RelaySwiftUI

extension TweetDetail_tweet_Key {
    func asFragment() -> RelaySwiftUI.Fragment<TweetDetail_tweet> {
        RelaySwiftUI.Fragment<TweetDetail_tweet>(self)
    }
}
#endif"
`;

exports[`pagination fragment 1`] = `
"#if canImport(RelaySwiftUI)
import RelaySwiftUI

extension TweetList_tweets_Key {
    func asFragment() -> RelaySwiftUI.Fragment<TweetList_tweets> {
        RelaySwiftUI.Fragment<TweetList_tweets>(self)
    }

    func asFragment() -> RelaySwiftUI.RefetchableFragment<TweetList_tweets> {
        RelaySwiftUI.RefetchableFragment<TweetList_tweets>(self)
    }

    func asFragment() -> RelaySwiftUI.PaginationFragment<TweetList_tweets> {
        RelaySwiftUI.PaginationFragment<TweetList_tweets>(self)
    }
}
#endif"
`;

exports[`refetchable fragment 1`] = `
"#if canImport(RelaySwiftUI)
import RelaySwiftUI

extension TweetDetail_tweet_Key {
    func asFragment() -> RelaySwiftUI.Fragment<TweetDetail_tweet> {
        RelaySwiftUI.Fragment<TweetDetail_tweet>(self)
    }

    func asFragment() -> RelaySwiftUI.RefetchableFragment<TweetDetail_tweet> {
        RelaySwiftUI.RefetchableFragment<TweetDetail_tweet>(self)
    }
}
#endif"
`;
